# jane

./: .gitignore  README.md  commands.py  main.py  pyproject.toml  requirements.txt
notebooks/: connect_to_sqlite.ipynb  langchain_quickstart_QA.ipynb
