[tool.poetry]
name = "jane"
version = "0.0.1"
description = "Integration with (MacOS) to enable sending texts and other personal tasks"
authors = ["John Olushola <johntemiloluwa.o@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"
sounddevice = "^0.4.5"
openai-whisper = { git = "https://github.com/openai/whisper.git" }
PyQt6 = "^6.4.0"
openai = "^0.26.5"
soundfile = "^0.11.0"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
